# ChangeLog for dev-libs/libxslt
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.203 2010/01/25 19:29:16 armin76 Exp $

  18 Aug 2010; Fabian Groffen <grobian@gentoo.org> libxslt-1.1.26.ebuild:
  Marked ~m68k-mint, bug #333209

  25 Jan 2010; Raúl Porcel <armin76@gentoo.org> libxslt-1.1.26.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #296430

  16 Jan 2010; Tobias Klausmann <klausman@gentoo.org> libxslt-1.1.26.ebuild:
  Stable on alpha, bug #296430

  07 Jan 2010; Brent Baude <ranger@gentoo.org> libxslt-1.1.26.ebuild:
  Marking libxslt-1.1.26 ppc for bug 296430

  28 Dec 2009; Markus Meier <maekke@gentoo.org> libxslt-1.1.26.ebuild:
  arm/x86 stable, bug #296430

  18 Dec 2009; Jeroen Roovers <jer@gentoo.org> libxslt-1.1.26.ebuild:
  Stable for HPPA (bug #296430).

  14 Dec 2009; Brent Baude <ranger@gentoo.org> libxslt-1.1.26.ebuild:
  stable ppc64, bug 296430

  14 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> libxslt-1.1.26.ebuild:
  amd64 stable wrt #296430

  08 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> libxslt-1.1.26.ebuild:
  Because libgcrypt is missing pkg-config file, fixing cross-compile here
  wrt #267503, thanks to Andrei Slavoiu.

  07 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> libxslt-1.1.26.ebuild,
  +files/libxslt-1.1.26-undefined.patch:
  Fix linking with -Wl,--no-undefined wrt #246748 by Christian Ruppert.

*libxslt-1.1.26 (07 Oct 2009)

  07 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libxslt-1.1.26.ebuild, +files/libxslt.m4-libxslt-1.1.26.patch:
  Version bump.

  31 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  libxslt-1.1.24-r1.ebuild:
  Remove unused configure flags, bug #230750. Move documentation to one
  folder.

  31 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/libxslt-1.1.20-amd64.patch, -libxslt-1.1.22.ebuild:
  Clean up old, vulnerable revision, bug #271742.
