@@ -4,9 +4,7 @@ AUX libxslt-1.1.26-undefined.patch 616 RMD160 571771b9fd262df841442b4d8b0db19225
 AUX libxslt-1.1.26-versionscript-solaris.patch 866 RMD160 e081fd1d487a6b4e9f5d20422d066d1b226f83eb SHA1 a51141a8d6986f5410356088685aa90e5d9479cd SHA256 4283bf29358576f4248a84ea31fdbe60e1ccb55243ef9e712aecde09369df1ff
 AUX libxslt.m4-libxslt-1.1.26.patch 1421 RMD160 f54116e3871afaa97daf5bbb832f2147d395077b SHA1 cdf3aa89083371b45e88c67cc53b9303cd13f2f8 SHA256 c02cd8437064db0921c08e63245c403dad12410d2997715aa7aa36600bfaa895
 AUX libxslt.m4-libxslt-1.1.8.patch 1292 RMD160 0dcd21978aa0102784df670f2c9835da227f42c8 SHA1 ffa3c5ff84b0636ec4238167e324d377305c4d34 SHA256 0da59fb6cb50bf30e8ac79644df90394707ac07e60337aa3c0e53986781e9e0d
-DIST libxslt-1.1.24.tar.gz 3363961 RMD160 41e7721eeed722c45310877d045422b47ab32973 SHA1 b5402e24abff5545ed76f6a55049cbebc664bd58 SHA256 c0c10944841e9a79f29d409c6f8da0d1b1af0403eb3819c82c788dfa6a180b3e
 DIST libxslt-1.1.26.tar.gz 3401513 RMD160 fc7630352ae5772d25fc8132a373d477fb8d8d5f SHA1 69f74df8228b504a87e2b257c2d5238281c65154 SHA256 55dd52b42861f8a02989d701ef716d6280bfa02971e967c285016f99c66e3db1
-EBUILD libxslt-1.1.24-r1.ebuild 2141 RMD160 a488261b4ea9244586d6c8344c47bf69d0204829 SHA1 90efa046115bc04fc0dfcdf9e8c9704328493b96 SHA256 0d30bcfd1acbde5bac6e28d0736495957401cd1f974673bcbb81642f5f89278b
-EBUILD libxslt-1.1.26.ebuild 1676 RMD160 60d765bd51a2f4a6d17c65d18d83cd8579cca9da SHA1 1d22124d7ed214ca0af6ef10cfbef601db4f87ad SHA256 c15e3c17f4de2471337d3d31d437b13ba54117cced7b58c7aad688243b1f0e3c
-MISC ChangeLog 24209 RMD160 89151d34e14c4e2c0226fffa51a80ea234afc8ab SHA1 3a332279ea939682a0d503953c1b2ec9b8d338be SHA256 60f22de5e0f1c1f05a3366a69ab4d5cd65dc19e53fcf7ada1c43064256caa355
+EBUILD libxslt-1.1.26.ebuild 2715 RMD160 97fc3ef1bd983af87081d2c35d183a31a1ebab0d SHA1 c5bb14d8a7c48709b77ba0bd5d030d772866aafe SHA256 91dc5390865c04b4a4a7a51e18e52c09f5a3ee3ba40d7f4454da691539ff02ef
+MISC ChangeLog 24515 RMD160 6632734e71ba294ddba1c0560d8a80f519e8be8b SHA1 f9d187b4888850ee01efe9c06e12dbcddb98849a SHA256 3b710b6b40b84268ab4b546cce1f67732821ef9ca2c74554e6ad4fba0cbe2653
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
